# hands-on-ml

./: .gitignore  main.py  pyproject.toml
KNN/: knn.py  knn_scikit.py  style_transfer.py
LogisticRegression/: logistic_regression.py
PCA/: pca.py  pca_sklearn.py
SVM/: svm-sklearn.py  svm.py  svm_for_spiral.py
bilinear-models/: factorization-machines.py  matrix-factorization.py
decision-tree/: c45.py  sklearn-decision-tree.py
k-means/: k-means.py
linear-regression/: boston.py
